# pelican-renn-plugin

./: .cruft.json  .gitignore  README.md  pyproject.toml  tasks.py
pelican/plugins/patched_i18n_subsites/: __init__.py
pelican/plugins/pelican_renn_plugin/: __init__.py  hidden_category.py  html5_reader.py  jinja_filters.py  noindex_category.py  overrides.py  projects_directive.py  register.py  tailwindcss.py  thumbnail.py
pelican/plugins/pelican_renn_plugin/templates/pelican_renn_plugin/: project.html  projects.html
pelican/plugins/pelican_renn_plugin/templates/snippets/: project.html  projects.html
