[project]
name = "pelican-renn-plugin"
version = "0.0.0"
description = "A plugin for my own needs"
authors = [{name = "Guillaume Jorandon", email = "nobody@github.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["pelican", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14"
dependencies = [
    "pelican>=4.5",
    "pelican-i18n-subsites>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/gjorando/pelican-renn-plugin"
"Issue Tracker" = "https://github.com/gjorando/pelican-renn-plugin/issues"

[project.optional-dependencies]
markdown = ["markdown>=3.4"]
tailwindcss = ["pytailwindcss>=0.3", "requests>=2"]
thumbnail = ["Pillow>=12"]

[dependency-groups]
lint = [
    "invoke>=2.2",
    "ruff>=0.14.2,<1.0.0",
]
test = [
    "invoke>=2.2",
    "markdown>=3.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-sugar>=1.0",
]

[tool.pdm.build]
includes = ["pelican/"]
excludes = ["**/.DS_Store"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "D100",    # missing docstring in public module
  "D104",    # missing docstring in public package
  "D203",    # blank line before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "ISC001",  # disabled so `ruff format` works without warning
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pelican"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
